# cmake_test

./: .travis.yml  CMakeLists.txt  README.md  a.out  boost_hello.cpp  first.cpp
boost_test1/: CMakeLists.txt  README.md  boost_hello.cpp
